add: add remaining shared path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,7 @@
         "@errors/*": ["./shared/errors/*"],
         "@middlewares/*": ["./shared/middlewares/*"],
         "@providers/*": ["./shared/providers/*"],
+        "@database/*": ["./shared/database/*"],
         "@routes/*": ["./shared/routes/*"],
         "@config/*": ["./config/*"],
         "@modules/*": ["./modules/*"],
