--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.5",
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "ts-node-dev": "^1.1.1",
